--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>Simple subtitle</h3>
     <p>Pease on the world everywhere.</p>
     <p>How long you going to live</p>
+<p>New version</p>
     
 </body>
 </html>
