--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git test</title>
 </head>
+
 <body>
     <h1>Hello World!</h1>
     <h2>Hello Everybody!</h2>
     <h3>Simple subtitle</h3>
     <p>Pease on the world everywhere.</p>
     <p>How long you going to live</p>
-<p>New version</p>
-    
+    <p>New version one</p>
+
 </body>
+
 </html>
